Fix dropdown overflow on mobile (flarum/core#2070)

--- a/less/forum.less
+++ b/less/forum.less
@@ -91,3 +91,8 @@
   position: absolute;
   .Button--color(@tooltip-color, @tooltip-bg);
 }
+@media screen and (max-width: 550px) {
+  .MentionsDropdown {
+    max-width: 100%;
+  }
+}
